Fix/External user service
