# app/Http/Controllers/Api/ExternalUserController.php
@@ -39,29 +39,4 @@ class ExternalUserController extends Controller
         }
         return response()->json($result, $result['status']);
     }
-
-    /**
-     * @OA\Get(
-     *      path="/api/external_user/laravelHelper",
-     *      operationId="createExternalUserWithLaravelHelper",
-     *      tags={"Users"},
-     *      summary="Create a user from external data using Laravel Helper",
-     *      description="Create a user with data supplied from an external api by using built-in laravel helpers",
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *    )
-     * )
-     */
-    public function storeExternalUserWithLaravelHelper(): JsonResponse
-    {
-
-        $result['status'] = 200;
-        try {
-            $result['data'] = $this->externalUserService->createNewUserWithLaravelHelper();
-        } catch (Exception $error) {
-            $result = ['status' => 500, 'error' => $error->getMessage()];
-        }
-        return response()->json($result, $result['status']);
-    }
 }
